[gd_scene load_steps=7 format=3 uid="uid://bsbyjq2gwp27q"]

[ext_resource type="Script" uid="uid://bglqdveq13t8e" path="res://Scripts/dettagli_cliente.gd" id="1_fhxkj"]
[ext_resource type="Texture2D" uid="uid://8mcmnumgfdpr" path="res://Assets/Images/Backgrounds/Unsplash/dark-bg.jpeg" id="2_7f70d"]
[ext_resource type="PackedScene" uid="uid://bdvpqvcid0n3i" path="res://Scenes/top_bar.tscn" id="2_ssev7"]
[ext_resource type="PackedScene" uid="uid://53kxk7chwe1x" path="res://Scenes/home.tscn" id="3_fhxkj"]

[sub_resource type="LabelSettings" id="LabelSettings_fhxkj"]
font_size = 20
outline_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fhxkj"]
bg_color = Color(0.576471, 0.129412, 0.129412, 1)

[node name="DettagliCliente" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fhxkj")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -384.0
offset_right = 384.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7f70d")
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="TopBar" parent="VBoxContainer" instance=ExtResource("2_ssev7")]
layout_mode = 2
previous_scene = ExtResource("3_fhxkj")
title = "Dettagli cliente"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 25

[node name="Panel" type="Panel" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer/Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/Panel/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/Panel/MarginContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 25

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Panel" type="Panel" parent="VBoxContainer/MarginContainer/Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="Photo" type="TextureRect" parent="VBoxContainer/MarginContainer/Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 90)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 9.0
offset_right = -9.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Nominativo" type="Label" parent="VBoxContainer/MarginContainer/Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Nome Cognome"

[node name="Email" type="Label" parent="VBoxContainer/MarginContainer/Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "email.email@email.com"

[node name="DataNascita" type="Label" parent="VBoxContainer/MarginContainer/Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "01-01-2000"

[node name="Indirizzo" type="Label" parent="VBoxContainer/MarginContainer/Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Via Roma 11, Roma"

[node name="Telefono" type="Label" parent="VBoxContainer/MarginContainer/Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "366 1234 123"

[node name="VBoxContainer6" type="VBoxContainer" parent="VBoxContainer/MarginContainer/Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer6"]
layout_mode = 2
text = "Autocura"
label_settings = SubResource("LabelSettings_fhxkj")

[node name="Autocura" type="Label" parent="VBoxContainer/MarginContainer/Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
text = "Prodotto 1
Prodotto 2
..."

[node name="VBoxContainer7" type="VBoxContainer" parent="VBoxContainer/MarginContainer/Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer7"]
layout_mode = 2
text = "Trattamenti"
label_settings = SubResource("LabelSettings_fhxkj")

[node name="AddTreatButton" type="Button" parent="VBoxContainer/MarginContainer/Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer7" groups=["Buttons"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Aggiungi Nuovo Trattamento"

[node name="TreatList" type="VBoxContainer" parent="VBoxContainer/MarginContainer/Panel/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer7"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DeleteButton" type="Button" parent="VBoxContainer/VBoxContainer" groups=["Buttons"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 6
theme_override_styles/normal = SubResource("StyleBoxFlat_fhxkj")
text = "ELIMINA CLIENTE"

[node name="ModifyButton" type="Button" parent="VBoxContainer/VBoxContainer" groups=["Buttons"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 6
text = "MODIFICA"
